# torweather

./: .gitignore  .pre-commit-config.yaml  Procfile  README.rst  example.env  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: heroku.yml  python-test.yml
tests/: test_email.py  test_relay.py
torweather/: __init__.py  app.py  check.py  config.py  email.py  exceptions.py  logger.py  main.py  relay.py  schemas.py  utils.py
torweather/messages/: node_down.txt  outdated_version.txt
torweather/res/: message.txt
torweather/res/messages/: node_down.txt
torweather/routes/: subscribe.py  unsubscribe.py
torweather/static/: styles.css  torweather.js
torweather/templates/: 404.html  500.html  about.html  base.html  subscribe.html  unsubscribe.html
