[tool.poetry]
name = "torweather"
version = "0.1.0"
description = "Email notifier for TOR relay operators"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
google-api-python-client = "^2.41.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
mypy = "^0.941"
tox = "^3.24.5"
pytest = "^7.1.0"
pyclean = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
